# wgtool

./: .gitignore  README.md  pyproject.toml  requirements.txt  run_tests.sh  setup.cfg  setup.py  wgtool  wgtool.py  wgtool.sh
src/wgtool/: cli.py  exceptions.py  exporter.py  host.py  importer.py  models.py  post.py  qrcode.py  wgcli.py  wgtool.py
test/: test_wgtool.py
test_installation/: Dockerfile.python37  Dockerfile.python38  run_all_tests.sh  test_python37.sh  test_python38.sh
test_installation/python37/: test_python.sh
test_installation/python38/: test_python.sh
